--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,8 +22,6 @@ jobs:
               - 'game-id-fetcher/**'
             game-price-fetcher:
               - 'game-price-fetcher/**'
-            web:
-              - 'web/**'
 
   # Test Game ID Fetcher in Container
   test-game-id-fetcher:
@@ -85,8 +83,8 @@ jobs:
   # Integration Tests with Docker Compose
   integration-tests:
     runs-on: ubuntu-latest
-    needs: [changes, test-game-id-fetcher, test-game-price-fetcher, test-web]
-    if: always() && (needs.changes.outputs.game-id-fetcher == 'true' || needs.changes.outputs.game-price-fetcher == 'true' || needs.changes.outputs.web == 'true')
+    needs: [changes, test-game-id-fetcher, test-game-price-fetcher]
+    if: always() && (needs.changes.outputs.game-id-fetcher == 'true' || needs.changes.outputs.game-price-fetcher == 'true')
     steps:
       - uses: actions/checkout@v4
       
