--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -15,6 +15,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    command: ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
 
   game-price-fetcher:
     build: 
@@ -22,8 +23,11 @@ services:
       target: test
     ports:
       - "8001:8001"
+    environment:
+      - PORT=8001
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
       interval: 10s
       timeout: 5s
       retries: 5
+    command: ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8001"]
