--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -3,10 +3,11 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun run src/index.ts",
-    "build": "bun run build",
+    "dev": "bun run --watch src/index.ts",
+    "build": "bun build src/index.ts --outdir ./dist --target node",
+    "start": "bun run src/index.ts",
     "lint": "eslint . --fix",
-    "test": "bun run test"
+    "test": "bun test"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -24,6 +25,8 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
