--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -6,20 +6,26 @@
     "dev": "bun run --watch src/index.ts",
     "build": "bun build src/index.ts --outdir ./dist --target node",
     "start": "bun run src/index.ts",
-    "lint": "eslint . --fix",
-    "test": "bun test"
+    "test": "bun test",
+    "test:watch": "bun test --watch",
+    "lint": "eslint . --fix"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@types/bun": "^1.2.19",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
     "globals": "^16.3.0",
+    "prettier": "^3.2.5",
+    "supertest": "^6.3.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1"
   },
