ci: Add the api-gateway to the CI tests
ci: Replace old "docker-compose" command with new "docker compose" command

ci: Add workflow input to not skip tests [test all]

ci and feat: Add health checks for each service

ci & test: Add timeout for testing the api-gateway

fix: Ensure that data receive from ID service is handled as the right type

ci: Add workflow input to not skip tests [test all]

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,45 +1,20 @@
 # Use the official Bun image
-FROM oven/bun:1 AS base
-WORKDIR /usr/src/app
+FROM oven/bun:1 as base
+WORKDIR /app
 
-# Install dependencies
-FROM base AS install
-COPY bun.lockb package.json ./
+# Copy package files
+COPY package.json bun.lockb* ./
+
+# Development stage
+FROM base as dev
 RUN bun install --frozen-lockfile
 
-# Development dependencies
-FROM install AS install-with-dev
-RUN bun install --frozen-lockfile --dev
-
 # Copy source code
-FROM base AS prerelease
-COPY --from=install /usr/src/app/node_modules ./node_modules
 COPY . .
 
-# Build the application
-FROM prerelease AS build
-RUN bun run build
-
-# Development target
-FROM base AS dev
-COPY --from=install-with-dev /usr/src/app/node_modules ./node_modules
+# Runtime stage  
+FROM base as runtime
+RUN bun install --frozen-lockfile --production
 COPY . .
-RUN chown -R bun:bun /usr/src/app
-USER bun
 EXPOSE 8080
-ENTRYPOINT ["bun", "run", "dev"]
-
-# Production runtime target
-FROM base AS runtime
-COPY --from=install /usr/src/app/node_modules ./node_modules
-COPY . .
-
-# Create non-root user for security
-RUN chown -R bun:bun /usr/src/app
-USER bun
-
-# Expose API Gateway port
-EXPOSE 8080
-
-# Run the API Gateway
-ENTRYPOINT ["bun", "run", "start"]
+CMD ["bun", "run", "start"]
