--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -31,3 +31,25 @@ services:
       timeout: 5s
       retries: 5
     command: ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8001"]
+
+  api-gateway:
+    build: 
+      context: ./api-gateway
+      target: dev
+    ports:
+      - "8080:8080"
+    environment:
+      - GAME_ID_SERVICE_URL=http://game-id-fetcher:8000
+      - PRICE_SERVICE_URL=http://game-price-fetcher:8001
+      - NODE_ENV=production
+    depends_on:
+      game-id-fetcher:
+        condition: service_healthy
+      game-price-fetcher:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/api-docs"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    command: ["bun", "run", "start"]
