--- a/game-id-fetcher/Dockerfile
+++ b/game-id-fetcher/Dockerfile
@@ -1,19 +1,25 @@
-FROM python:3.13.0-slim as base
+FROM python:3.11-slim as base
 
 WORKDIR /app
 
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements and install Python dependencies
 COPY requirements.txt .
-
-COPY requirements-dev.txt .
-
 RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install --no-cache-dir -r requirements-dev.txt
+
+# Install test dependencies
+RUN pip install --no-cache-dir pytest pytest-cov pytest-asyncio httpx
 
 COPY . .
 
-FROM base as test
-CMD ["python", "-m", "pytest", "tests/", "-v"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
 
-FROM base as runtime
 EXPOSE 8000
+
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
