--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -94,19 +94,7 @@ jobs:
       - name: Run tests in container
         timeout-minutes: 5
         run: |
-          docker run --rm \
-            --entrypoint="" \
-            api-gateway:test \
-            bun test --timeout 30000
-            
-      - name: Run lint checks
-        if: success()
-        timeout-minutes: 2
-        run: |
-          docker run --rm \
-            --entrypoint="" \
-            api-gateway:test \
-            bun run lint
+          docker run --rm api-gateway:test bun test
 
   integration-tests:
     runs-on: ubuntu-latest
@@ -196,10 +184,12 @@ jobs:
   debug:
     runs-on: ubuntu-latest
     needs: changes
-    if: ${{ always() }}
     steps:
-      - name: Debug run-all value
+      - name: Debug values
         run: |
-          echo "Manual trigger input: ${{ inputs.run_all_tests }}"
-          echo "Commit message check: ${{ contains(github.event.head_commit.message, '[test all]') }}"
-          echo "Final run-all value: ${{ needs.changes.outputs.run-all }}"
+          echo "run_all_tests input: ${{ inputs.run_all_tests }}"
+          echo "commit message contains [test all]: ${{ contains(github.event.head_commit.message, '[test all]') }}"
+          echo "run-all output: ${{ needs.changes.outputs.run-all }}"
+          echo "game-id-fetcher: ${{ needs.changes.outputs.game-id-fetcher }}"
+          echo "game-price-fetcher: ${{ needs.changes.outputs.game-price-fetcher }}"
+          echo "api-gateway: ${{ needs.changes.outputs.api-gateway }}"
