--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -8,7 +8,8 @@
     "start": "bun run src/index.ts",
     "test": "bun test",
     "test:watch": "bun test --watch",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "lint:src": "eslint src --fix"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
