ci: Add test stage to id-fetcher

--- a/game-id-fetcher/Dockerfile
+++ b/game-id-fetcher/Dockerfile
@@ -16,10 +16,15 @@ RUN pip install --no-cache-dir pytest pytest-cov pytest-asyncio httpx
 
 COPY . .
 
+# ✅ Add test stage
+FROM base as test
+CMD ["python", "-m", "pytest", "tests/", "-v"]
+
+# ✅ Production stage
+FROM base as runtime
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 EXPOSE 8000
-
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
