--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,15 +46,13 @@ jobs:
         
       - name: Build Game ID Fetcher image
         run: |
-          docker build -t game-id-fetcher:test ./game-id-fetcher
+          docker build --target test -t game-id-fetcher:test ./game-id-fetcher
           
-      - name: Run tests in container (without coverage)
+      - name: Run tests in container
         run: |
           docker run --rm \
-            -e CLIENT_ID=test_client_id \
-            -e CLIENT_SECRET=test_client_secret \
-            game-id-fetcher:test \
-            python -m pytest tests/ -v
+            -e API_KEY=test_api_key \
+            game-id-fetcher:test
 
   test-game-price-fetcher:
     runs-on: ubuntu-latest
@@ -68,13 +66,12 @@ jobs:
         
       - name: Build Game Price Fetcher image
         run: |
-          docker build -t game-price-fetcher:test ./game-price-fetcher
+          docker build --target test -t game-price-fetcher:test ./game-price-fetcher
           
       - name: Run tests in container
         run: |
           docker run --rm \
-            game-price-fetcher:test \
-            python -m pytest tests/ -v
+            game-price-fetcher:test
 
   test-api-gateway:
     runs-on: ubuntu-latest
@@ -120,8 +117,7 @@ jobs:
         
       - name: Create test environment file
         run: |
-          echo "CLIENT_ID=test_client_id" > .env
-          echo "CLIENT_SECRET=test_client_secret" >> .env
+          echo "API_KEY=test_api_key" > .env
           
       - name: Start services with Docker Compose
         run: |
@@ -185,9 +181,17 @@ jobs:
           curl -f http://localhost:8001/health  
           curl -f http://localhost:8080/health
           
+          # Test Game ID Fetcher endpoint
+          response=$(curl -s "http://localhost:8000/game-ids?title=portal&result_num=5")
+          echo "Game ID response: $response"
+          
+          # Test Game Price Fetcher endpoint
+          price_response=$(curl -s "http://localhost:8001/price/steam?game_id=620&currency=USD")
+          echo "Price response: $price_response"
+          
           # Test API Gateway proxy
-          response=$(curl -s http://localhost:8080/api/games/search?query=test)
-          echo "API response: $response"
+          gateway_response=$(curl -s "http://localhost:8080/api/games/search?query=portal")
+          echo "API Gateway response: $gateway_response"
           
       - name: Stop services
         if: always()
