--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -8,8 +8,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - CLIENT_ID=${CLIENT_ID}
-      - CLIENT_SECRET=${CLIENT_SECRET}
+      - API_KEY=${API_KEY}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 10s
