--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,9 +1,9 @@
 version: '3.8'
 
 services:
-  price-fetcher:
+  game-id-fetcher:
     build: 
-      context: ./price-fetcher
+      context: ./game-id-fetcher
       target: runtime
     ports:
       - "8000:8000"
@@ -15,6 +15,20 @@ services:
       timeout: 5s
       retries: 5
 
+  game-price-fetcher:
+    build: 
+      context: ./game-price-fetcher
+      target: runtime
+    ports:
+      - "8001:8001"
+    environment:
+      - PORT=8001
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   api-gateway:
     build: 
       context: ./api-gateway
@@ -22,10 +36,13 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - PRICE_FETCHER_SERVICE_URL=http://price-fetcher:8000
+      - GAME_ID_SERVICE_URL=http://game-id-fetcher:8000
+      - PRICE_SERVICE_URL=http://game-price-fetcher:8001
       - NODE_ENV=production
     depends_on:
-      price-fetcher:
+      game-id-fetcher:
+        condition: service_healthy
+      game-price-fetcher:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
