--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test Project
+name: Test JohnsGamePrice
 
 on: 
   pull_request:
@@ -19,6 +19,7 @@ jobs:
     outputs:
       price-fetcher: ${{ steps.changes.outputs.price-fetcher }}
       api-gateway: ${{ steps.changes.outputs.api-gateway }}
+      web: ${{ steps.changes.outputs.web }}
       run-all: ${{ inputs.run_all_tests == true || contains(github.event.head_commit.message, '[test all]') }}
     steps:
       - uses: actions/checkout@v4
@@ -30,6 +31,8 @@ jobs:
               - 'price-fetcher/**'
             api-gateway:
               - 'api-gateway/**'
+            web:
+              - 'web/**'
 
   test-price-fetcher:
     runs-on: ubuntu-latest
@@ -41,15 +44,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         
-      - name: Build Price Fetcher image
+      - name: Build Price Fetcher test image
         run: |
           docker build --target test -t price-fetcher:test ./price-fetcher
           
-      - name: Run tests in container
+      - name: Run Price Fetcher tests
         run: |
           docker run --rm \
             -e API_KEY=test_api_key \
             price-fetcher:test
+
+      - name: Build Price Fetcher runtime image
+        run: |
+          docker build --target runtime -t price-fetcher:runtime ./price-fetcher
 
   test-api-gateway:
     runs-on: ubuntu-latest
@@ -62,11 +69,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         
-      - name: Build API Gateway image
+      - name: Build API Gateway dev image
         run: |
           docker build --target dev -t api-gateway:test ./api-gateway
           
-      - name: Run tests in container
+      - name: Run API Gateway tests
         timeout-minutes: 5
         run: |
           docker run --rm \
@@ -74,7 +81,7 @@ jobs:
             api-gateway:test \
             bun test --timeout 30000
             
-      - name: Run lint checks
+      - name: Run API Gateway lint checks
         if: success()
         timeout-minutes: 2
         run: |
@@ -83,10 +90,42 @@ jobs:
             api-gateway:test \
             bun run lint
 
+      - name: Build API Gateway runtime image
+        run: |
+          docker build --target runtime -t api-gateway:runtime ./api-gateway
+
+  test-web:
+    runs-on: ubuntu-latest
+    needs: changes
+    if: ${{ needs.changes.outputs.web == 'true' || needs.changes.outputs.run-all == 'true' }}
+    timeout-minutes: 15
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        
+      - name: Build Web dev image
+        run: |
+          docker build --target dev -t web:test ./web
+          
+      - name: Run Web tests
+        timeout-minutes: 10
+        run: |
+          docker run --rm \
+            --entrypoint="" \
+            web:test \
+            bun test --timeout 30000
+
+      - name: Build Web production image
+        run: |
+          docker build --target runtime -t web:runtime ./web
+
   integration-tests:
     runs-on: ubuntu-latest
     needs: [changes, test-price-fetcher, test-api-gateway]
     if: always() && (needs.changes.outputs.price-fetcher == 'true' || needs.changes.outputs.api-gateway == 'true' || needs.changes.outputs.run-all == 'true')
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
       
@@ -102,30 +141,31 @@ jobs:
           docker compose -f docker-compose.test.yml up -d
           
       - name: Wait for services to be ready
+        timeout-minutes: 5
         run: |
           echo "Waiting for services to start..."
-          sleep 45
+          sleep 30
           
           # Check if containers are running
           docker compose -f docker-compose.test.yml ps
           
-          # Simple connection tests (no health endpoint dependency)
-          echo "Testing basic connectivity..."
-          for i in {1..12}; do
+          # Wait for services with retries
+          echo "Testing service connectivity..."
+          for i in {1..24}; do
             if curl -s http://localhost:8000/health > /dev/null 2>&1; then
               echo "✓ price-fetcher is responding"
               break
             fi
-            echo "Waiting for price-fetcher... ($i/12)"
+            echo "Waiting for price-fetcher... ($i/24)"
             sleep 5
           done
           
-          for i in {1..12}; do
+          for i in {1..24}; do
             if curl -s http://localhost:8080/health > /dev/null 2>&1; then
               echo "✓ api-gateway is responding"
               break
             fi
-            echo "Waiting for api-gateway... ($i/12)"
+            echo "Waiting for api-gateway... ($i/24)"
             sleep 5
           done
           
@@ -139,34 +179,74 @@ jobs:
           echo "=== API Gateway logs ==="
           docker compose -f docker-compose.test.yml logs api-gateway
           
-      - name: Run basic integration tests
+      - name: Run integration tests
+        timeout-minutes: 5
         run: |
-          echo "Testing basic endpoints..."
+          echo "Testing service endpoints..."
           
           # Test health endpoints
+          echo "Testing health endpoints..."
           curl -f http://localhost:8000/health
           curl -f http://localhost:8080/health
           
-          # Test Price Fetcher endpoint
+          # Test Price Fetcher game search
+          echo "Testing Price Fetcher game search..."
           response=$(curl -s "http://localhost:8000/game-ids?title=portal&result_num=5")
           echo "Price Fetcher response: $response"
           
+          # Verify response structure
+          echo "$response" | grep -q '"games"' || exit 1
+          echo "$response" | grep -q '"count"' || exit 1
+          
           # Test API Gateway proxy
+          echo "Testing API Gateway game search proxy..."
           gateway_response=$(curl -s "http://localhost:8080/api/games/search?query=portal")
           echo "API Gateway response: $gateway_response"
+          
+          # Verify proxy response structure
+          echo "$gateway_response" | grep -q '"results"' || exit 1
+          echo "$gateway_response" | grep -q '"query"' || exit 1
+          echo "$gateway_response" | grep -q '"count"' || exit 1
           
       - name: Stop services
         if: always()
         run: docker compose -f docker-compose.test.yml down -v
 
+  build-verification:
+    runs-on: ubuntu-latest
+    needs: [test-price-fetcher, test-api-gateway, test-web, integration-tests]
+    if: always()
+    steps:
+      - name: Verify all tests passed
+        run: |
+          echo "Price Fetcher Tests: ${{ needs.test-price-fetcher.result }}"
+          echo "API Gateway Tests: ${{ needs.test-api-gateway.result }}"
+          echo "Web Tests: ${{ needs.test-web.result }}"
+          echo "Integration Tests: ${{ needs.integration-tests.result }}"
+          
+          if [[ "${{ needs.test-price-fetcher.result }}" == "failure" || 
+                "${{ needs.test-api-gateway.result }}" == "failure" || 
+                "${{ needs.test-web.result }}" == "failure" || 
+                "${{ needs.integration-tests.result }}" == "failure" ]]; then
+            echo "❌ Some tests failed"
+            exit 1
+          else
+            echo "✅ All tests passed successfully"
+          fi
+
   debug:
     runs-on: ubuntu-latest
     needs: changes
     steps:
-      - name: Debug values
+      - name: Debug workflow values
         run: |
+          echo "🔍 Workflow Debug Information"
+          echo "================================"
           echo "run_all_tests input: ${{ inputs.run_all_tests }}"
           echo "commit message contains [test all]: ${{ contains(github.event.head_commit.message, '[test all]') }}"
           echo "run-all output: ${{ needs.changes.outputs.run-all }}"
-          echo "price-fetcher: ${{ needs.changes.outputs.price-fetcher }}"
-          echo "api-gateway: ${{ needs.changes.outputs.api-gateway }}"
+          echo "price-fetcher changed: ${{ needs.changes.outputs.price-fetcher }}"
+          echo "api-gateway changed: ${{ needs.changes.outputs.api-gateway }}"
+          echo "web changed: ${{ needs.changes.outputs.web }}"
+          echo "event name: ${{ github.event_name }}"
+          echo "ref: ${{ github.ref }}"
