--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,15 @@
     "dockerdev": "vite",
     "build": "vite build",
     "start": "vite preview",
-    "dev": "vite --host 0.0.0.0"
+    "dev": "vite --host 0.0.0.0",
+    "test": "bun test tests/",
+    "test:watch": "bun test tests/ --watch",
+    "test:coverage": "bun test tests/ --coverage",
+    "test:utils": "bun test tests/modules/*/utils/",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
