--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "redis": "^5.8.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
