--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,10 @@ services:
       - PORT=8080
       - PRICE_FETCHER_SERVICE_URL=http://price-fetcher:8000
       - LOG_LEVEL=info
+      - REDIS_URL=redis://redis:6379
     depends_on:
       - price-fetcher
+      - redis
     restart: unless-stopped
     networks:
       - john-network
@@ -39,6 +41,14 @@ services:
       - VITE_API_URL=http://localhost:8080 
     depends_on:
       - api-gateway
+    networks:
+      - john-network
+
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
     networks:
       - john-network
 
