ci: Add debug curls on integration-test.sh
ci: Add docker compose logs upon failure

ci: Remove failure condition required to see logs

fix: Provide redis url for docker-compose script

CI: Add redis service to docker-compose.test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -207,7 +207,6 @@ jobs:
           done
           
       - name: Show service status on failure
-        if: failure()
         run: |
           echo "=== Docker Compose Services ==="
           docker compose -f docker-compose.test.yml ps
@@ -217,7 +216,10 @@ jobs:
           echo ""
           echo "=== API Gateway logs ==="
           docker compose -f docker-compose.test.yml logs api-gateway
-          
+          echo ""
+          echo "=== Redis logs ==="
+          docker compose -f docker-compose.test.yml logs redis
+
       - name: Test API endpoints
         timeout-minutes: 5
         run: |
