ci: Updated integration tests to work with new kubernetes workflow
ci: Attempt to allow manual test trigger

ci: Rename to test in hopes it will be picked up as a workflow to trigger

ci: Adding debugging message

ci: Add GITHUB_TOKEN secret variable for the deploying stack with helm and manifests.

ci: Create seperate scripts for local development and for ci tests on actions

ci: Specify KinD cluster name

ci: Include addition of Grafana's repo in the deploy.test.sh file

ci: Dynamically load secret for redis and extract API key from github secrets

ci: Add time for redis to start up

ci: Add unit test stage before integration tests

ci: Install bun before running unit tests

ci: Fix bun installation for workflow

ci: Ensure bun is available in subsequent step

ci: Add bun install dependencies before each unit test

ci: Price-fetcher now has the correct setup for python

ci: Add PYTHONPATH env to src

ci: Seperate jobs

ci : Seperate the unit tests for each service

ci: Change PYTHONPATH

ci: Add dummyapikey for price fetcher unit test

ci: Remove PYTHONPATH

ci: Seperate unit tests from integration tests

ci: Remove PYTHONPATH

ci: Use a different command to run pytest

chore: Remove tester which is no longer needed for integration tests

build: Turn off persistence in grafana for local development

ci: Add some basic integration tests

chore: Add development helper scripts and update integration workflow

- Added new scripts for easier local development and testing
- Improved integration_test.sh with endpoint and Redis checks
- Updated GitHub Actions integration workflow to use unified test script
- Enhanced logging and error handling for better debugging

ci: Modified scripts to be compatible with the ci and single file for local deployment

ci: Add debugging and retrieve api key for ci test

ci: Change imagePullPolicy on deployments from never to IfNotPresent

ci: Migrate the build and loading of containers into KinD to be in the workflow

ci: Replace redis nam

--- a/k8s/price-fetcher-deployment.yaml
+++ b/k8s/price-fetcher-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: price-fetcher
           image: johnsgameprice-price-fetcher:latest
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
           env:
