--- a/k8s/web-deployment.yaml
+++ b/k8s/web-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: web
           image: johnsgameprice-web
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
           env:
